// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Posts.vue > When the component renders > matches the snapshot 1`] = `
"<div title="Sortable Post List">
  <transition-group-stub name="list" tag="div" appear="false" persisted="false" css="true" class="flex flex-col gap-4">
    <div index="0" postid="1" showsortup="false" showsortdown="true"></div>
    <div index="1" postid="2" showsortup="true" showsortdown="true"></div>
    <div index="2" postid="3" showsortup="true" showsortdown="true"></div>
    <div index="3" postid="4" showsortup="true" showsortdown="true"></div>
    <div index="4" postid="5" showsortup="true" showsortdown="false"></div>
  </transition-group-stub>
</div>
<div title="List of actions commited">
  <div icon="info" text="Please sort a post in the Sortable Post List"></div>
</div>
<div message="Hello! I have provided 5 posts for you to sort." variant="info"></div>"
`;

exports[`Posts.vue > when sorting post List > matches the snapshot 1`] = `
"<div title="Sortable Post List">
  <transition-group-stub name="list" tag="div" appear="false" persisted="false" css="true" class="flex flex-col gap-4">
    <div index="0" postid="1" showsortup="false" showsortdown="true"></div>
    <div index="1" postid="3" showsortup="true" showsortdown="true"></div>
    <div index="2" postid="2" showsortup="true" showsortdown="true"></div>
    <div index="3" postid="4" showsortup="true" showsortdown="true"></div>
    <div index="4" postid="5" showsortup="true" showsortdown="false"></div>
  </transition-group-stub>
</div>
<div title="List of actions commited">
  <div>
    <div class="p-4 flex items-center border-b border-theme-light last:border-none transform transition-all duration-500">
      <p class="flex-1" data-test="itemText">Moved post 2 from index 1 to index 2</p><button aria-label="onTimeTravelBtn" role="button" data-test="onTimeTravelBtn" class="p-4 bg-theme-secondary py-3 px-4 flex-none rounded">Time travel</button>
    </div>
  </div>
</div>
<div message="Hello! I have provided 5 posts for you to sort." variant="info"></div>"
`;

exports[`Posts.vue > when sorting post List > matches the snapshot 2`] = `
"<div title="Sortable Post List">
  <transition-group-stub name="list" tag="div" appear="false" persisted="false" css="true" class="flex flex-col gap-4">
    <div index="0" postid="1" showsortup="false" showsortdown="true"></div>
    <div index="1" postid="3" showsortup="true" showsortdown="true"></div>
    <div index="2" postid="2" showsortup="true" showsortdown="true"></div>
    <div index="3" postid="5" showsortup="true" showsortdown="true"></div>
    <div index="4" postid="4" showsortup="true" showsortdown="false"></div>
  </transition-group-stub>
</div>
<div title="List of actions commited">
  <div>
    <div class="p-4 flex items-center border-b border-theme-light last:border-none transform transition-all duration-500">
      <p class="flex-1" data-test="itemText">Moved post 4 from index 3 to index 4</p><button aria-label="onTimeTravelBtn" role="button" data-test="onTimeTravelBtn" class="p-4 bg-theme-secondary py-3 px-4 flex-none rounded">Time travel</button>
    </div>
    <div class="p-4 flex items-center border-b border-theme-light last:border-none transform transition-all duration-500">
      <p class="flex-1" data-test="itemText">Moved post 2 from index 1 to index 2</p><button aria-label="onTimeTravelBtn" role="button" data-test="onTimeTravelBtn" class="p-4 bg-theme-secondary py-3 px-4 flex-none rounded">Time travel</button>
    </div>
  </div>
</div>
<div message="Hello! I have provided 5 posts for you to sort." variant="info"></div>"
`;

exports[`Posts.vue > when sorting post List > matches the snapshot 3`] = `
"<div title="Sortable Post List">
  <transition-group-stub name="list" tag="div" appear="false" persisted="false" css="true" class="flex flex-col gap-4">
    <div index="0" postid="3" showsortup="false" showsortdown="true"></div>
    <div index="1" postid="1" showsortup="true" showsortdown="true"></div>
    <div index="2" postid="2" showsortup="true" showsortdown="true"></div>
    <div index="3" postid="5" showsortup="true" showsortdown="true"></div>
    <div index="4" postid="4" showsortup="true" showsortdown="false"></div>
  </transition-group-stub>
</div>
<div title="List of actions commited">
  <div>
    <div class="p-4 flex items-center border-b border-theme-light last:border-none transform transition-all duration-500">
      <p class="flex-1" data-test="itemText">Moved post 3 from index 1 to index 0</p><button aria-label="onTimeTravelBtn" role="button" data-test="onTimeTravelBtn" class="p-4 bg-theme-secondary py-3 px-4 flex-none rounded">Time travel</button>
    </div>
    <div class="p-4 flex items-center border-b border-theme-light last:border-none transform transition-all duration-500">
      <p class="flex-1" data-test="itemText">Moved post 4 from index 3 to index 4</p><button aria-label="onTimeTravelBtn" role="button" data-test="onTimeTravelBtn" class="p-4 bg-theme-secondary py-3 px-4 flex-none rounded">Time travel</button>
    </div>
    <div class="p-4 flex items-center border-b border-theme-light last:border-none transform transition-all duration-500">
      <p class="flex-1" data-test="itemText">Moved post 2 from index 1 to index 2</p><button aria-label="onTimeTravelBtn" role="button" data-test="onTimeTravelBtn" class="p-4 bg-theme-secondary py-3 px-4 flex-none rounded">Time travel</button>
    </div>
  </div>
</div>
<div message="Hello! I have provided 5 posts for you to sort." variant="info"></div>"
`;
